@@ -1,3 +1,8 @@
+2002-07-06  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/focus.c (CMD_WarpToWindow):
+	fixed WarpToWindow with unmanaged windows
+
 2002-07-05  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/events.c (HandleButtonPress):
